增加了数据驱动（测试步骤、测试数据参数化、测试结果）以及测试用例参数化

--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <properties>
+        <junit-jupiter.version>5.4.0</junit-jupiter.version>
+        <aspectj.version>1.8.10</aspectj.version>
+        <maven.test.skip>true</maven.test.skip>
+        <!-- 解决mvn编译乱码问题-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <logback.version>1.1.7</logback.version>
+        <slf4j.version>1.7.21</slf4j.version>
+    </properties>
 
     <groupId>org.example</groupId>
     <artifactId>AppiumPO</artifactId>
@@ -48,6 +59,21 @@
             <artifactId>hamcrest-core</artifactId>
             <version>2.1</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.9.9</version>
         </dependency>
     </dependencies>
 
